--- a/src/main/resources/templates/adduser.html
+++ b/src/main/resources/templates/adduser.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
 	        <div class="navbar-header">
-	            <a class="navbar-brand" href="/">Electronic Diary</a>
+	            <a class="navbar-brand" href="/">Login i Password</a>
 	        </div>
 	        <ul class="nav navbar-nav">
 	            <li class="pupils"><a href="/pupils">Lista pupilków</a></li>
@@ -28,15 +28,14 @@
 
   <p th:text="${message}">Dodaj</p>
   
-   			 <h1>Add pupilek:</h1> 
-   			 	<form th:action="@{/adduser}" th:object="${userModel}" method="post">
+   			 <h1>Wpisz dane login oraz hasło</h1> 
+   			 	<form th:action="@{/addUserController}" th:object="${userModel}" method="post">
     
-			                
-			        <p><input type="submit" value="Add Pupil" /></p>        
-  			   </form>    
-  			       
-
-    
+	       			<p><input type="text" th:field="*{login}" placeholder="Login" /></p>
+			        <p><input type="text" th:field="*{password}" placeholder="Hasło" /></p>
+			        <p><input type="text" th:field="*{password}" placeholder="Powtórz hasło" /></p>  
+			        <p><input type="submit" value="Dalej" /></p>        
+  			   </form> 
 </div> 
     
     <div class ="col-lg-3">
