--- a/src/main/resources/templates/adduser.html
+++ b/src/main/resources/templates/adduser.html
@@ -18,7 +18,7 @@
 	        <ul class="nav navbar-nav">
 	            <li class="pupils"><a href="/pupils">Lista pupilków</a></li>
 	             <li class="active"><a href="/addpupil">Dodaj</a></li>
-	             <li><a href="/login">Zaloguj sie</a></li>
+	             <li><a href="/loginform">Zaloguj sie</a></li>
 	              <li><a href="/register">Utwórz konto</a></li>
 	        </ul>
     </div>
