--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,9 +16,7 @@
             <a class="navbar-brand" href="/">Electronic Diary</a>
         </div>
         <ul class="nav navbar-nav">
-            <li><a href="/pupils">Lista pupilków</a></li>
-            <li><a href="/addpupil">Dodaj</a></li>
-            <li><a href="/login">Zaloguj sie</a></li>
+            <li><a href="/loginform">Zaloguj sie</a></li>
             <li class="active" ><a href="/register">Utwórz konto</a></li>
         </ul>
     </div>
