small changes and corrections in registration

--- a/src/main/resources/templates/teachersubmitregistrationpanel.html
+++ b/src/main/resources/templates/teachersubmitregistrationpanel.html
@@ -29,8 +29,7 @@
 		    Kod logowania 			<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.keyRegisterValue}" readonly/>
 	 		Imię				 	<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.firstName}" readonly/>	
    			Nazwisko				<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.lastName}" readonly/>
-   			Pesel					<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.pesel}" readonly/>
-	      	Role					<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.roleName}" readonly/>
+   			Pesel					<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.pesel}" readonly/>s
 			W przypadku gdy któraś z powyższych danych osoboowych jest błędna proszę skontakować się z adminem: adrian.skorupa92@gmail.com lub tel. 608820193
 			<br/>
 			Login					<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.login}"/>				
