--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,7 +16,7 @@
             <a class="navbar-brand" href="/">Electronic Diary</a>
         </div>
         <ul class="nav navbar-nav">
-            <li><a href="/loginform.jsp">Zaloguj sie</a></li>
+            <li><a href="/loginform">Zaloguj sie</a></li>
             <li class="active" ><a href="/register">Utwórz konto</a></li>
         </ul>
     </div>
@@ -32,10 +32,7 @@
    			 	<form th:action="@{/registerKeyController}" th:object="${keyRegisterModel}" method="post">
     
 			        <p><input type="text" th:field="*{keyRegisterValue}" placeholder="20-cyfrowy kod" width="48" height="48"/></p>
-			        
-			 
-			     
-			                
+			      
 			        <p><input type="submit" value="Rozpocznij rejestracje" /></p>      
 		
   			   </form>    
