--- a/src/main/resources/templates/loginform.html
+++ b/src/main/resources/templates/loginform.html
@@ -18,14 +18,14 @@
         </div>
         <ul class="nav navbar-nav">
               <li><a href="/loginform">Zaloguj sie</a></li>
-               <li><a href="/register">Utwórz konto</a></li>
+               <li><a href="/register">UtwÃ³rz konto</a></li>
         </ul>
     </div>
 </nav>
 
 <body>
     <h1>Please Login</h1>
-    <form  th:action="@{/processlogin}"  th:object="${userModel}" method="post">
+    <form  th:action="@{/loginController}"  th:object="${userModel}" method="post">
         <input name="username" placeholder="Username" /> <br />
         <input name="password" placeholder="Password" /> <br />
         <input type="submit" value="Login" />
