You dont see login button and register button when you are logged in. Changes in the way you register and log in

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,7 +20,9 @@
                <li><a href="/register">Utwórz konto</a></li>
         </ul>
     </div>
+ 
 </nav>
+  <h3 th:text="${loggedUserName}">Zalogowany</h3>  
 
 </body>
 </html>
