--- a/src/main/resources/templates/loginform.html
+++ b/src/main/resources/templates/loginform.html
@@ -14,18 +14,19 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Electronic Diary</a>
+           <a class="navbar-brand" href="/">Electronic Diary</a>
         </div>
         <ul class="nav navbar-nav">
-              <li><a href="/loginform">Zaloguj sie</a></li>
+              <li><a  href="/loginform">Zaloguj sie</a></li>
                <li><a href="/register">Utwórz konto</a></li>
+             
         </ul>
     </div>
 </nav>
 
 <body>
     <h1>Please Login</h1>
-    <form  th:action="@{/loginController}"  th:object="${userModel}" method="post">
+    <form  th:action="@{/login}"  th:object="${userModel}" method="post">
         <input name="username" placeholder="Username" /> <br />
         <input name="password" placeholder="Password" /> <br />
         <input type="submit" value="Login" />
