User Registration creates also pupil or teacher.

--- a/src/main/resources/templates/pupilsubmitregistrationpanel.html
+++ b/src/main/resources/templates/pupilsubmitregistrationpanel.html
@@ -32,8 +32,8 @@
 	 		Imię				 	<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.firstName}" readonly/>	
    			Nazwisko				<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.lastName}" readonly/>
    			Pesel					<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.pesel}" readonly/>
-	  
-	     	Klasa					<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.className}"readonly/>				
+	  		classNumber			<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.schollClassnumber}" readonly/>
+	  		classLetter					<input class="form-control" type="text" th:field="${RegisterKeyAndRoleDTO.schollClassLetter}" readonly/>
 	 		<br/>
 		
 			W przypadku gdy któraś z powyższych danych osoboowych jest błędna proszę skontakować się z adminem: adrian.skorupa92@gmail.com lub tel. 608820193
