Enum Subject, changes in index, find pupil marks

--- a/src/main/resources/templates/checkmarks.html
+++ b/src/main/resources/templates/checkmarks.html
@@ -20,32 +20,14 @@
 
  <li> <a th:if= "${#strings.isEmpty(session.email)}" href="/loginform">Zaloguj sie</a><li>
                <li><a th:if= "${#strings.isEmpty(session.email)}" href="/register">Utwórz konto</a></li>
-       			 <li> <a th:if= "${not #strings.isEmpty(session.email)}" href="/logout">Wyloguj sie</a></li>
-
-       			 	 <li th:switch="${session.rolename}">
-       			
-       			 		<li th:action="@{/checkmarks}" th:object="${sesion}" >
-	       			 	</li>
-	       			 	
-    <li th:switch="${session.rolename}" class="dropdown"><a th:case="'uczeń'" class="dropdown-toggle" data-toggle="dropdown" href="#">Sprawdz oceny <span class="caret"></span></a>
-		   
-		          	 <ul  class="dropdown-menu">
-				          <li th:each="lesson: ${subjectNames}" >	
-					          <a  
-					          		th:utext="${lesson.subjectName}" 
-						        	th:object="${lesson}"  
-						            th:href="@{/checkmarks}"> 
-					          </a>
-				          </li>
-		       		</ul>
-        </li>
+       			<li> <a th:if= "${not #strings.isEmpty(session.email)}" href="/logout">Wyloguj sie</a></li>
+				<li><a href="/checkmarks">Sprawdz oceny</a></li>			 	
+        </ul>
     </div>
 </nav>
 
-<h3>Success Page</h3>
- <h3 th:text="${session.email}">Zalogowany</h3>  
- <h3 th:text="${session.rolename}">Zalogowany</h3>  
-	<br>
+
+
 </body>
 </html>
 
