--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>Home</title>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">Electronic Diary</a>
-        </div>
-        <ul class="nav navbar-nav">
-
- <li> <a th:if= "${#strings.isEmpty(session.username)}" href="/loginform">Zaloguj sie</a><li>
-               <li><a th:if= "${#strings.isEmpty(session.username)}" href="/register">Utwórz konto</a></li>
-       			 <li> <a th:if= "${not #strings.isEmpty(session.username)}" href="/logout">Wyloguj sie</a></li>
-        </ul>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
     </div>
-</nav>
-<h3>Success Page</h3>
- <h3 th:text="${session.username}">Zalogowany</h3>  
+    <ul class="nav navbar-nav">
 
+ <li> <a th:if= "${#strings.isEmpty(session.email)}" href="/loginform">Zaloguj sie</a><li>
+               <li><a th:if= "${#strings.isEmpty(session.email)}" href="/register">Utwórz konto</a></li>
+       			 <li> <a th:if= "${not #strings.isEmpty(session.email)}" href="/logout">Wyloguj sie</a></li>
+
+       			 	 <li th:switch="${session.rolename}">
+       			
+       			 		<li th:action="@{/checkmarks}" th:object="${sesion}" >
+	       			 	</li>
+	      </div>
+</nav>     	
+
+
+
+<div class="col-lg-3">
+  
+ 		 			<form th:action="@{/subjects}" method="get">
+		    <select th:name="subjectType">
+			         <option th:each="state : ${T(pl.javastart.model.SubjectType).values()}"
+	          			  th:value="${state}"
+	            		  th:text="${state}"
+	            		  th:selected="${selectedsubjectType eq state.name()}" >
+	   			 	</option>
+		    </select>
+   		   <input type="submit" value="Znajdz oceny" />
+	</form>
+</div>    
+    <div class ="col-lg-3">
+    
+    </div> 
+    
+  	<div class="col-lg-3">
+  
+     </div>  
+
+<h3>Success Page</h3>
+ <h3 th:text="${session.email}">Zalogowany</h3>  
+ <h3 th:text="${session.rolename}">Zalogowany</h3>  
 	<br>
 </body>
 </html>
