--- a/src/main/resources/templates/loginform.html
+++ b/src/main/resources/templates/loginform.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
-<meta charset="UTF-8" />
-<title>Please Login</title>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-           <a class="navbar-brand" href="/">Electronic Diary</a>
-        </div>
-        <ul class="nav navbar-nav">
+<body>
+
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
               <li><a  href="/loginform">Zaloguj sie</a></li>
                <li><a href="/register">Utwórz konto</a></li>
              
@@ -27,7 +27,7 @@
 <body>
     <h1>Please Login</h1>
     <form  th:action="@{/login}"  th:object="${userModel}" method="post">
-        <input name="username" placeholder="Username" /> <br />
+        <input name="email" placeholder="Username" /> <br />
         <input name="password" placeholder="Password" /> <br />
         <input type="submit" value="Login" />
     </form>
