--- a/src/main/resources/templates/pupilview.html
+++ b/src/main/resources/templates/pupilview.html
@@ -26,8 +26,11 @@
        			
        			 		<li th:action="@{/checkmarks}" th:object="${sesion}" >
 	       			 	</li>
-	       			 	
-    <li th:switch="${session.rolename}" class="dropdown"><a th:case="'uczeń'" class="dropdown-toggle" data-toggle="dropdown" href="#">Sprawdz oceny <span class="caret"></span></a>
+	      </div>
+</nav>     			 	
+    <div th:switch="${session.rolename}" class="dropdown">
+    
+    <a th:case="'uczeń'" class="dropdown-toggle" data-toggle="dropdown" href="#">Sprawdz oceny <span class="caret"></span></a>
 		   
 		          	 <ul  class="dropdown-menu">
 				          <li th:each="lesson: ${subjectNames}" >	
@@ -38,9 +41,8 @@
 					          </a>
 				          </li>
 		       		</ul>
-        </li>
-    </div>
-</nav>
+        </div>
+
 
 <h3>Success Page</h3>
  <h3 th:text="${session.email}">Zalogowany</h3>  
