marks view in index

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,6 +51,25 @@
   	<div class="col-lg-3">
   
      </div>  
+     
+     
+<table border="1px">
+    <tr>
+        <th>Nazwa przedmiotu</th>
+        <th>Ocena </th>
+    </tr>
+    <tr th:each="marks : ${userMarks}">
+        <td></td>
+        <td>
+      </td>
+        <td th:text="${marks.markValue}"></td>
+        <td th:text="${marks.subjectName}"></td>
+     
+    </tr>
+</table>
+
+
+
 
 <h3>Success Page</h3>
  <h3 th:text="${session.email}">Zalogowany</h3>  
