--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,13 +23,10 @@
              	  <li><a th:if= "${#strings.isEmpty(session.email)}" href="/register">Utwórz konto</a></li>
        			 <li> <a th:if= "${not #strings.isEmpty(session.email)}" href="/logout">Wyloguj sie</a></li>
 
-       			 	 <li><a th:if="${session.rolename =='uczeń'}" href="/checkmarks">Sprawdz oceny</a></li>
-       			
-       			 	
-       			 		
-	       			
-	       			 	
-	       			 	</ul>
+       		     <li><a th:if="${session.rolename =='uczeń'}" href="/checkmarks">Sprawdz oceny</a></li>
+       			 <li><a th:if="${session.rolename =='nauczyciel'}" href="/selectformget">Wstaw oceny</a></li>
+       		
+	       	</ul>
 	      </div>
 	
 </nav>     		
@@ -50,13 +47,6 @@
   	<div class="col-lg-3">
  
      </div>  
-     
-     
-
- 
-
-
-
 
 </body>
 </html>
