--- a/src/main/resources/templates/selectform.html
+++ b/src/main/resources/templates/selectform.html
@@ -22,7 +22,38 @@ SPAN.td
 }
 </style>
 
+   <script src="js/script.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" >
+    </script>
+    <script type="text/javascript" >
+function setMark(evt) {
+	var charCode = (evt.which) ? evt.which : event.keyCode
+		    if (charCode < 49 || charCode > 54)
+		    	 return false;
+		    	 var value = document.getElementById('newMark').value;
+		    if (value >2) {
+		        return false;
+		    }
+		    return true;
+}
 
+function setWeight(evt) {
+	var charCode = (evt.which) ? evt.which : event.keyCode
+		    if (charCode < 49 || charCode > 58)
+		    	 return false;
+		    	 var value = document.getElementById('markWeight').value;
+		    if (value >2) {
+		        return false;
+		    }
+		    return true;
+		
+}
+
+
+function myFunction(val) {
+	  document.getElementById("purpose").innerHTML = val; 
+	}
+</script>
 
 </head>
 <body>
@@ -42,23 +73,16 @@ SPAN.td
 
        		     <li><a th:if="${session.rolename =='uczeń'}" href="/checkmarks">Sprawdz oceny</a></li>
        			 <li><a th:if="${session.rolename =='nauczyciel'}" href="/selectformget">Wstaw oceny</a></li>
-       		
 	       	</ul>
 	      </div>
-	
 </nav>  
- 
     <h1>Wstawianie ocen</h1>
- 
- 
- 
     <form th:action="@{/selectedClass}" name='f' th:object="${classForm}" method='POST'>
         <table>
             <tr>
                 <td>Wybierz klasę:</td>
                 <td>
                     <select th:name=lessonId>
-                    
                          <option value=""> -- </option>
                          <option th:each="class : ${classes}"
                             th:value="${class.classId}"
@@ -73,16 +97,10 @@ SPAN.td
             </tr>
         </table>
     </form>
-    
-    
-    
-
-
 <div th:each="pupil: ${pupilList}">
-
 <form th:action="@{/insertOneMark}" method="post">
   <table class="table table-hover">
-        
+       
            <thead  th:if="${pupil.index} < 2" >
             <tr>
                 <th>lessonId	</th>
@@ -94,25 +112,31 @@ SPAN.td
                    <th>markWeight  </th>
             </tr>
             </thead>
-          
-          
-          
             <tr>
-            <td><input class="form-control"  type="number" name="lessonId" th:value="${pupil.lessonId}"   readonly></td> 
-			<td><input class="form-control"  type="number" name="pupilId" th:value="${pupil.pupilId}"   readonly></td> 
+            <td><input class="form-control"  type="text" name="lessonId" th:value="${pupil.lessonId}"   readonly></td> 
+			<td><input class="form-control"  type="text" name="pupilId" th:value="${pupil.pupilId}"   readonly></td> 
 			<td><input class="form-control"  type="text"  name="firstName"   th:value="${pupil.firstName}" readonly></td>           	
             <td><input class="form-control" type="text"  name="lastName" th:value="${pupil.lastName}"  readonly></td>           	
-            <td> <input class="form-control" type="number" name="mark"  placeholder="Ocena"/></td>
-		    <td> <input class="form-control"  type="text" name="description"   placeholder="Opis"/></td>
-		    <td> <input class="form-control" type="number" name="markWeight"  placeholder="Waga Oceny"/></td> 
+            <td> <input class="form-control" type="number" id='newMark'   max ="6" step="1"  onkeypress="return setMark(event)" name="mark" min="1" placeholder="Ocena"/></td>
+		    <td> <select id='purpose' class="form-control"  name="description"  >
+		      
+		    <option  value = "SPRAWDZIAN" selected>Sprawdzian</option >
+            <option value = "KARTKOWKA">Kartkówka</option>
+            <option value = "ODPOWIEDZUSTNA">Odpowiedz ustna</option>
+             <option value = "PRACA_DOMOWA">Praca domowa</option>
+              <option value = "INNE">inne</option>
+		    </select>
+		</td>
+		    <td> <input class="form-control" type="number" name="markWeight" id='markWeight' min="1" max ="9" step="1"  onkeypress="return setWeight(event)"   placeholder="Waga Oceny"/></td> 
 			  <td> <button type="submit" >Wstaw ocene</button>  </td> 
             </tr>
              
         </table>
-   </form>     
+   </form>   
+     
 </div>
 
- 
+
 
  
 </body>
